Use platform thread while waiting for the info window to show up